@@ -1,6 +1,13 @@
 \name{NEWS}
 \title{News for package \pkg{BgeeDB}}
 
+\section{Version 2.3.2 (2017-05)}{
+  \itemize{
+    \item Compatibility of the TopAnat part of the package with the new Bgee release 14 (www.bgee.org/bgee14/).
+    \item Better management of potential issues with the ontology structure
+  }
+}
+
 \section{Version 2.3.1 (2017-05)}{
   \itemize{
     \item Compatibility with the new Bgee release 14 (www.bgee.org/bgee14/) only for the processed data download part.
